# forge-core

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp
cmake/: CLI11.cmake  FindMHD.cmake  boost.cmake  cpptoml.cmake  cxxopts.cmake  flags.cmake  fmt.cmake  g3log.cmake  gtest.cmake  jsoncpp.cmake  jsonrpc.cmake  options.cmake  utilxx.cmake
include/cli/: CLIGlobalVariables.hpp  LookupOnlySubcommands.hpp  ReadOnlySubcommands.hpp  ReadWriteSubcommands.hpp
include/client/: ClientError.hpp  ReadOnlyClientBase.hpp  WriteOnlyClientBase.hpp
include/client/odin/: ReadOnlyOdinClient.hpp  ReadWriteOdinClient.hpp
include/core/: Block.hpp  Coin.hpp  Entry.hpp  EntryCreationOp.hpp  EntryDeletionOp.hpp  EntryRenewalOp.hpp  EntryUpdateOp.hpp  FlagIndexes.hpp  OpReturnTx.hpp  Operation.hpp  OwnershipTransferOp.hpp  Transaction.hpp
include/core/umentry/: UMEntry.hpp  UMEntryCreationOp.hpp  UMEntryDeletionOp.hpp  UMEntryOperation.hpp  UMEntryOwnershipTransferOp.hpp  UMEntryRenewalOp.hpp  UMEntryUpdateOp.hpp
include/daemon/: Coin.hpp  DaemonBase.hpp  DaemonError.hpp  OdinDaemon.hpp  ReadOnlyDaemonBase.hpp  ReadWriteDaemonBase.hpp  WriteOnlyDaemonBase.hpp
include/daemon/odin/: ReadOnlyOdinDaemon.hpp  ReadWriteOdinDaemon.hpp
include/entrys/: Entry.hpp  EntryCreationOp.hpp  EntryOperation.hpp
include/entrys/token/: UtilityToken.hpp  UtilityTokenCreationOp.hpp  UtilityTokenDeletionOp.hpp  UtilityTokenOperation.hpp  UtilityTokenOwnershipTransferOp.hpp
include/entrys/uentry/: UniqueEntry.hpp  UniqueEntryCreationOp.hpp  UniqueEntryDeletionOp.hpp  UniqueEntryOperation.hpp  UniqueEntryOwnershipTransferOp.hpp  UniqueEntryRenewalOp.hpp
include/entrys/umentry/: UMEntry.hpp  UMEntryCreationOp.hpp  UMEntryDeletionOp.hpp  UMEntryOperation.hpp  UMEntryOwnershipTransferOp.hpp  UMEntryRenewalOp.hpp  UMEntryUpdateOp.hpp
include/env/: LoggingSetup.hpp  ProgramOptions.hpp
include/lookup/: EntryLookup.hpp  LookupError.hpp  LookupManager.hpp  UMEntryLookup.hpp  UniqueEntryLookup.hpp  UtilityTokenLookup.hpp
include/rpc/: JsonRpcServer.hpp  LookupOnlyServer.hpp  LookupOnlyServerStub.json  ReadOnlyWalletServer.hpp  ReadOnlyWalletServerStub.json  ReadWriteWalletServer.hpp  ReadWriteWalletServerStub.json  abstractjsonrpcstubserver.h  abstractlookuponlystubclient.h  abstractlookuponlystubsever.h  abstractreadonlywalletstubsever.h  abstractreadwritewalletstubsever.h  jsonrpcstubclient.h  lookuponlystubclient.h  readonlywalletstubclient.h  readwritewalletstubclient.h
include/util/: Opt.hpp  Result.hpp
include/utils/: Algorithm.hpp  Opt.hpp  Overload.hpp  Result.hpp
include/wallet/: ReadOnlyWallet.hpp  ReadWriteWallet.hpp  WalletError.hpp
patches/: json-cpp-1.9.1.patch
src/: LoggingSetup.hpp  buddy-cli.cpp  buddyd.cpp  forge-cli.cpp  forged.cpp  main.cpp
src/cli/: LookupOnlySubcommands.cpp  ReadOnlySubcommands.cpp  ReadWriteSubcommands.cpp
src/client/: ReadOnlyClientBase.cpp  WriteOnlyClientBase.cpp
src/client/odin/: ReadOnlyOdinClient.cpp  ReadWriteOdinClient.cpp
src/core/: Block.cpp  Coin.cpp  Entry.cpp  EntryCreationOp.cpp  EntryDeletionOp.cpp  EntryRenewalOp.cpp  EntryUpdateOp.cpp  OpReturnTx.cpp  Operation.cpp  OwnershipTransferOp.cpp  Transaction.cpp
src/core/umentry/: UMEntry.cpp  UMEntryCreationOp.cpp  UMEntryDeletionOp.cpp  UMEntryOperation.cpp  UMEntryOwnershipTransferOp.cpp  UMEntryRenewalOp.cpp  UMEntryUpdateOp.cpp
src/daemon/: Coin.cpp  DaemonBase.cpp  OdinDaemon.cpp  ReadOnlyDaemonBase.cpp  ReadWriteDaemonBase.cpp  WriteOnlyDaemonBase.cpp
src/daemon/odin/: ReadOnlyOdinDaemon.cpp  ReadWriteOdinDaemon.cpp
src/entrys/: Entry.cpp  EntryCreationOp.cpp  EntryOperation.cpp
src/entrys/token/: UtilityToken.cpp  UtilityTokenCreationOp.cpp  UtilityTokenDeletionOp.cpp  UtilityTokenOperation.cpp  UtilityTokenOwnershipTransferOp.cpp
src/entrys/uentry/: UniqueEntry.cpp  UniqueEntryCreationOp.cpp  UniqueEntryDeletionOp.cpp  UniqueEntryOperation.cpp  UniqueEntryOwnershipTransferOp.cpp  UniqueEntryRenewalOp.cpp
src/entrys/umentry/: UMEntry.cpp  UMEntryCreationOp.cpp  UMEntryDeletionOp.cpp  UMEntryOperation.cpp  UMEntryOwnershipTransferOp.cpp  UMEntryRenewalOp.cpp  UMEntryUpdateOp.cpp
src/env/: LoggingSetup.cpp  ProgramOptions.cpp
src/lookup/: EntryLookup.cpp  LookupManager.cpp  UMEntryLookup.cpp  UniqueEntryLookup.cpp  UtilityTokenLookup.cpp
src/rpc/: JsonRpcServer.cpp  LookupOnlyServer.cpp  ReadOnlyWalletServer.cpp  ReadWriteWalletServer.cpp
src/wallet/: ReadOnlyWallet.cpp  ReadWriteWallet.cpp
test/: CMakeLists.txt  block_tests.cpp  entry_lookup_tests.cpp  entry_tests.cpp  main.cpp  operation_tests.cpp  parsing.hpp  read_only_odin_tests.cpp  read_write_odin_tests.cpp  resource_path.hpp  transaction_tests.cpp  umentry_operation_tests.cpp  utility_token_lookup_tests.cpp  utility_token_operation_tests.cpp  utility_token_tests.cpp
test/resources/: addressgroupings_invalid1.json  addressgroupings_invalid2.json  addressgroupings_valid1.json  block_count_invalid1.json  block_count_invalid2.json  block_hash_valid1.json  block_invalid1.json  block_invalid2.json  block_valid1.json  decode_txid_invalid1.json  decode_txid_valid1.json  generate_new_address_valid1.json  send_to_address_valid1.json  sign_raw_tx_invalid1.json  sign_raw_tx_invalid2.json  sign_raw_tx_invalid3.json  sign_raw_tx_invalid4.json  sign_raw_tx_valid1.json  tx_valid1.json  tx_valid2.json  tx_valid3.json  txin_invalid1.json  txin_valid.json  txout_invalid1.json  txout_invalid2.json  txout_valid1.json  txout_valid2.json  txout_valid3.json  unspent_invalid1.json  unspent_invalid2.json  unspent_invalid3.json  unspent_valid1.json  unspent_valid2.json  vout_index_valid1.json
